--- a/web/bower.json
+++ b/web/bower.json
@@ -7,6 +7,7 @@
     "angular-uuid": "https://github.com/munkychop/angular-uuid.git",
     "angular-file-upload": "^2.5.0",
     "ng-file-upload": "^12.2.13",
-    "htmlparser2": "^3.9.2"
+    "htmlparser2": "^3.9.2",
+    "angular-local-storage": "^0.5.2"
   }
 }
